# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1450 2010-09-30 11:04:36 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta5 2010-??-??
 - 2010-09-30 Fixed bug#5911 - Enhance menu behaviour.
    The submenus in the agent main menu open on click by default. With the new
    config "OpenMainMenuOnHover" setting it can be specified that they should
    also open on mouse hover.
 - 2010-09-30 Updated Ukrainian translation file, thanks to Бельский Артем!
 - 2010-09-30 Fixed bug#5979 - IE8 - articles for a ticket doesn't switch
 - 2010-09-29 Fixed bug#6017 - QueueLookup function returns wrong QueueID if a
    queue name was updated.
 - 2010-09-29 Fixed bug#6019 - Choosing a search template does nothing.
 - 2010-09-29 Fixed bug#6033 - Too many toolbar icons shown by default.
    Toolbar shortcuts are not shown by default.
    Toolbar items for tickets (such as locked tickets) are only shown if
    they have active tickets.
 - 2010-09-29 Fixed bug#6032 - Customer History context settings not working.
 - 2010-09-28 Fixed bug#6021 - Ticket Types are still displayed if they're invalid.
 - 2010-09-28 Fixed bug#4732 - Mysql table index not used when LOWER()
    is used in queries for customer_user.login. There is now a new flag CaseSensitive
    in the customer DB settings. Setting this to 1 will improve performance
    dramatically on large databases.
 - 2010-09-24 Fixed bug#6007 - Free field content not saved.

3.0.0 beta4 2010-09-27
 - 2010-09-24 Updated Russian translation file, thanks to Eugene Kungurov!
 - 2010-09-24 Fixed bug#5655 - In Article Zoom, after a new article got created
    and page reloads, new article is shown as new. It's confusing.
 - 2010-09-24 Fixed bug#5848 - Wrong characters in Czech language.